--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <div class="type-js headline">
                     <h1 class="text-js">Hi, I'm Muhammad!</h1>
                   </div>
-                  <h5 class="animated fadeIn mb-3">I'm a <b>Software Developer </b>based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.</h5>
+                  <h5 class="animated fadeIn mb-3">I'm a <b>Software Developer </b>based in Ontario Canada. I specialize in bringing your awesome ideas to life on the web.</h5>
                   <a class="btn btn-rounded resbtn btn-lg" style="color: white;" target="_blank" href="mjaffarResume.pdf"><i class="fa fa-user left"></i>Check Out My Resume!</a>
                   <a class="btn-floating btn-lg" style="background-color: black;"href="https://github.com/MuhammadCoder"><i class="fa fa-github" aria-hidden="true"></i></a>
                   <a class="btn-floating btn-lg blue-gradient" href="https://www.linkedin.com/in/muhammad-jaffar-767509122/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -97,7 +97,7 @@
         <!-- <h3 style="margin-top: 100px;">About</h3> -->
         <h3 style="text-align: center; margin-top: 120px;">Hey there!</h3>
         <div class="container" style="margin-left:20%; width:60%; margin-top:40px; font-size:20px;">
-          <p>My Name is Muhammad Jaffar. I specizliaze in <strong>Web/Mobile Design</strong> and in <strong>user experience design</strong></p>
+          <p>My name is Muhammad Jaffar. I specizliaze in <strong>Web/Mobile Design</strong> and in <strong>user experience design</strong></p>
           <p>I am a 4th year student at University of Guelph in the <a id="proglink"href="https://www.uoguelph.ca/registrar/calendars/undergraduate/2015-2016/c10/c10bcomp-seng.shtml" target="_blank">Software Engineering program</a>, which has given me a broad set of skills
           <br>from user experience design to techinal skills and marketing.</br></p>
           <p>My portfolio encompasses my skills and <strong>passion to help people.</strong></p>
